--- a/app/views/v4/cases/check.html
+++ b/app/views/v4/cases/check.html
@@ -58,8 +58,8 @@ href: 'ref'
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <div class="govuk-form-group">
-      <h1 class="govuk-body govuk-!-font-size-48 govuk-!-font-weight-bold"> <span class="govuk-caption-xl">Assign to another solicitor</span>
-        Check details before sending
+      <h1 class="govuk-body govuk-!-font-size-48 govuk-!-font-weight-bold"> <span class="govuk-caption-xl">Share case with respondent solicitor</span>
+        Check and confirm details
       </h1>
     </div>
 
@@ -70,7 +70,7 @@ href: 'ref'
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
-          Name
+          Organisation name
         </dt>
         <dd class="govuk-summary-list__value">
           Pritchard Joyce & Hinds
@@ -147,14 +147,14 @@ href: 'ref'
       </div>
 
     </dl>
-    <h2 class="govuk-heading-m">Your reference</h2>
+    <h2 class="govuk-heading-m">Respondent solicitor reference</h2>
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key">
-          Details
+          Reference
         </dt>
         <dd class="govuk-summary-list__value">
-          Tom Bailey
+          Michele Serrano EB-345-2020
         </dd>
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="ref">Change
@@ -174,7 +174,7 @@ href: 'ref'
       <input type="hidden" name="answers-checked" value="true">
 
       {{ govukButton({
-          text: "Accept and send",
+          text: "Accept and submit",
           href: "confirm"
           }) }}
 
