--- a/app/views/v4/cases/confirm.html
+++ b/app/views/v4/cases/confirm.html
@@ -58,7 +58,7 @@ Contact HMCTS
 
     <div class="govuk-panel govuk-panel--confirmation">
       <h1 class="govuk-panel__title">
-        Case sent successfully
+        Your case has been shared
       </h1>
       <!--  <div class="govuk-panel__body">
             Your reference number<br><strong>HDJ2123F</strong>
@@ -72,8 +72,9 @@ Contact HMCTS
     <h2 class="govuk-heading-m">What happens next</h2>
 
     <p>
-      Your case will be sent to Pritchard Joyce & Hinds.
+      Your case has been shared with [organisation name].
     </p>
+    <p>The organisation will now be able to update and access the shared case.</p>
 
   </div>
 </div>
