--- a/app/views/v4/cases/ref.html
+++ b/app/views/v4/cases/ref.html
@@ -58,7 +58,7 @@ href: 'BR31'
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <div class="govuk-form-group">
-      <h1 class="govuk-body govuk-!-font-size-48 govuk-!-font-weight-bold"> <span class="govuk-caption-xl">Assign to another solicitor</span>
+      <h1 class="govuk-body govuk-!-font-size-48 govuk-!-font-weight-bold"> <span class="govuk-caption-xl">Share case with respondent solicitor</span>
         Add a reference
       </h1>
     </div>
@@ -67,7 +67,7 @@ href: 'BR31'
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds govuk-!-padding-bottom-7">
     <span id="" class="govuk-hint hmcts-search__hint ">
-      For example, an individuals name or the case ID</span>
+      You can add a reference to help you find a case. For example, the respondent solicitor’s name, email address or unique case ID.</span>
     <input class="govuk-input hmcts-search__input" id="new" name="" type="search" aria-describedby="" value="">
   </div>
 </div>
