--- a/app/views/v4/cases/BR31.html
+++ b/app/views/v4/cases/BR31.html
@@ -58,8 +58,8 @@ href: 'assign'
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <div class="govuk-form-group">
-      <h1 class="govuk-body govuk-!-font-size-48 govuk-!-font-weight-bold"> <span class="govuk-caption-xl">Assign to another solicitor</span>
-        Search for solicitors
+      <h1 class="govuk-body govuk-!-font-size-48 govuk-!-font-weight-bold"> <span class="govuk-caption-xl">Share case with respondent solicitor</span>
+        Search for an organisation
       </h1>
     </div>
   </div>
@@ -67,11 +67,12 @@ href: 'assign'
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds govuk-!-padding-bottom-7">
     <span id="" class="govuk-hint hmcts-search__hint ">
-      Solicitors must be registered with MyHMCTS. Search by name, location or postcode</span>
+      You can only search for organisations already registered with MyHMCTS. For example, you can search by organisation name or address.
+    </span>
     <input class="govuk-input hmcts-search__input" id="new" name="" type="search" aria-describedby="" value="BR31">
   </div>
 </div>
-<h2 class="govuk-heading-l">Result</h2>
+<h2 class="govuk-heading-l">Results</h2>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     <table class="govuk-table">
