--- a/app/views/noticeofchange/layoutdemo.html
+++ b/app/views/noticeofchange/layoutdemo.html
@@ -42,48 +42,84 @@
 
 {% block header %}
   {% include "includes/cookie-banner.html" %}
-  {{ hmctsHeader({
 
-    service: {
-      name: 'Manage Cases',
-      url: '/noticeofchange/solicitor/caselist'
-    },
 
-    navigation: {
-      label: 'Account navigation',
-      items: [{
-        text: 'Sign out',
-        href: '#'
-      }]
-    }
-  }) }}
+
+
+    <header class="hmcts-header" role="banner">
+
+        <div style="width:1220px; display: flex; margin: 0 auto;">
+
+            <div style="width: 406px; ">
+                <a style="color: white; font-size: 30px; font-weight: bold; text-decoration: none;" href="#">MyHMCTS</a>
+            </div>
+
+            <div class="hmcts-header__container" style="width: 814px;">
+
+
+                <div class="hmcts-header__logo">
+                    <a class="hmcts-header__link" href="/noticeofchange/solicitor/caselist">Manage Cases</a>
+                </div>
+
+
+                <div class="hmcts-header__content">
+                    <nav class="hmcts-header__navigation" aria-label="Account navigation">
+                        <ul class="hmcts-header__navigation-list">
+                            <li class="hmcts-header__navigation-item">
+                                <a class="hmcts-header__navigation-link" href="#">
+                                    Sign out
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+
+            </div>
+
+        </div>
+
+
+    </header>
 
   {% set searchHtml %}
     <a class="hmcts-search-toggle__button" href="#">Find case</a>
   {% endset %}
 
 
+    <div  style="background-color: black;">
+        <div style="width:1220px; display: flex; margin: 0 auto; background-color: black;">
 
-  {{ hmctsPrimaryNavigation({
-    label: 'Primary navigation',
-    items: [{
-              text: 'Case list',
-              href: getUrl('/solicitor/caselist'),
-              active: pageId == '#'
-          },
-          {
-              text: 'Create case',
-              href: getUrl('/solicitor/caselist'),
-              active: pageId == '#'
-          },
-          {
-              text: 'Notice of change',
-              href: getUrl('/solicitor/startorstop'),
-              active: pageId == '#'
-          }
-    ],
-    searchHtml: searchHtml
-  }) }}
+            <div style="width: 406px; ">
+
+            </div>
+
+            <div class="hmcts-header__container" style="width: 814px;">
+                {{ hmctsPrimaryNavigation({
+                label: 'Primary navigation',
+                items: [{
+                text: 'Case list',
+                href: getUrl('/solicitor/caselist'),
+                active: pageId == '#'
+                },
+                {
+                text: 'Create case',
+                href: getUrl('/solicitor/caselist'),
+                active: pageId == '#'
+                },
+                {
+                text: 'Notice of change',
+                href: getUrl('/solicitor/startorstop'),
+                active: pageId == '#'
+                }
+                ],
+                searchHtml: searchHtml
+                }) }}
+            </div>
+        </div>
+
+
+    </div>
+
 
 
   <div class="govuk-phase-banner govuk-width-container">
