udates to notice of change and also first page of remove

--- a/app/views/noticeofchange/layoutdemo.html
+++ b/app/views/noticeofchange/layoutdemo.html
@@ -107,8 +107,8 @@
                 active: pageId == '#'
                 },
                 {
-                text: 'Notice of change',
-                href: getUrl('/solicitor/startorstop'),
+                text: 'Take over representation',
+                href: getUrl('/solicitor/addenterdetails'),
                 active: pageId == '#'
                 }
                 ],
