--- a/app/views/noticeofchange/solicitor/caselist.html
+++ b/app/views/noticeofchange/solicitor/caselist.html
@@ -35,7 +35,7 @@ Case details
 
         <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="#">3689-2642-5857-7069</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-16"><a href="casedetails">3689-2642-5857-7069</a></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16">24 Jun 2020, 3:47:26 PM</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16"> </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-16">3689-2642-5857-7069</td>
