--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -9,7 +9,7 @@ Case details
 
 <div class="govuk-width-container">
 
-    <main class="govuk-main-wrapper " id="main-content" role="main">
+    <main class=" " id="main-content" role="main">
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds-from-desktop">
 
@@ -39,30 +39,13 @@ Case details
                             </a>
                         </dd>
                     </div>
+
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
-                            Case type
+                            Your role
                         </dt>
                         <dd class="govuk-summary-list__value">
-                            Divorce
-                        </dd>
-                        <dd class="govuk-summary-list__actions">
-                            <a class="govuk-link" href="#">
-
-                            </a>
-                        </dd>
-                    </div>
-                </dl>
-
-                <h2 class="govuk-heading-m">Your client</h2>
-
-                <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-                    <div class="govuk-summary-list__row">
-                        <dt class="govuk-summary-list__key">
-                            Current First and Middle names
-                        </dt>
-                        <dd class="govuk-summary-list__value">
-                            Laura
+                            Solicitor placeholder 2
                         </dd>
                         <dd class="govuk-summary-list__actions">
                             <a class="govuk-link" href="#">
@@ -72,7 +55,7 @@ Case details
                     </div>
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">
-                            Current Last Name
+                            Last name of party
                         </dt>
                         <dd class="govuk-summary-list__value">
                             Narran
@@ -86,7 +69,35 @@ Case details
                 </dl>
 
 
-                <h2 class="govuk-heading-m">Notifications</h2>
+                <!-- STAMENT OF STRUTH -->
+                <div class="govuk-form-group">
+                    <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                            <h2 class="govuk-fieldset__heading">
+                                Statement of truth
+                            </h2>
+                        </legend>
+                        <p>Tick to “sign” this statement of truth.</p>
+                        <div class="govuk-checkboxes">
+                            <div class="govuk-checkboxes__item">
+                                <input class="govuk-checkboxes__input" id="sot" name="sot" type="checkbox" value="carcasses">
+                                <label class="govuk-label govuk-checkboxes__label" for="sot">
+
+
+                                    <p>I believe myself or my organisation has been requested to represent a party in this case.</p>
+
+                                    <p>I understand that proceedings for contempt of court may be brought against
+                                        anyone who requests access to a case verified by a statement of truth without
+                                        an honest belief in its truth.</p>
+                                </label>
+                            </div>
+                        </div>
+                    </fieldset>
+                </div>
+
+
+
+                <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Notifications</h2>
 
                 <p class="govuk-body  govuk-!-margin-bottom-7">Once approved we will send a confirmation email of this notice of change to you snd the legal firm that is being taken off the record.</p>
 
