--- a/app/views/noticeofchange/solicitor/confirmation.html
+++ b/app/views/noticeofchange/solicitor/confirmation.html
@@ -55,7 +55,7 @@ Case details
                     <h2 class="govuk-heading-m govuk-!-margin-top-6">What happens next</h2>
                     <p>We'll send you a an email when we approve your request. <br>This may take a few days.</p>
                     <p class="govuk-body">
-                        <a href="#">Go to case list</a>
+                        <a href="caselist">Go to case list</a>
                     </p>
                 {% endif %}
 
