--- a/app/views/noticeofchange/solicitor/securityquestionprobate.html
+++ b/app/views/noticeofchange/solicitor/securityquestionprobate.html
@@ -13,7 +13,7 @@ Case details
 
                 <div class="hmcts-page-heading">
                       <div class="hmcts-page-heading__title">
-                           <h1 class="govuk-heading-l">Enter case number</h1>
+                           <h1 class="govuk-heading-l">Enter case details</h1>
                       </div>
                 </div>
 
@@ -24,14 +24,12 @@ Case details
                         id="aspnetForm"
                         autocomplete="off">
 
+
                         <div class="govuk-form-group">
-                            <!--<label class="govuk-label" for="casenumber">
-                                Case number
-                            </label>-->
-                          <span id="case-number-hint" class="govuk-hint">
-                            This is a 16 digit number
-                          </span>
-                            <input class="govuk-input govuk-input--width-10" id="casenumber" name="casenumber" type="text" spellcheck="false">
+                            <label class="govuk-label" for="full-name">
+                                Last name of the person you will be representing
+                            </label>
+                            <input class="govuk-input govuk-input--width-10" id="full-name" name="full-name" type="text" autocomplete="name" spellcheck="false">
                         </div>
 
 
