--- a/app/views/noticeofchange/solicitor/selectroleprobate.html
+++ b/app/views/noticeofchange/solicitor/selectroleprobate.html
@@ -24,19 +24,19 @@ Case details
                 <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="solicitor" name="role" type="radio" value="solicitor" >
                     <label class="govuk-label govuk-radios__label" for="solicitor">
-                        Solicitor
+                        Solicitor placeholder 1
                     </label>
                 </div>
                 <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="barrister" name="role" type="radio" value="barrister" >
                     <label class="govuk-label govuk-radios__label" for="barrister">
-                        Barrister
+                        Solicitor placeholder 2
                     </label>
                 </div>
                 <div class="govuk-radios__item">
                     <input class="govuk-radios__input" id="paralegal" name="role" type="radio" value="paralegal" >
                     <label class="govuk-label govuk-radios__label" for="paralegal">
-                        Paralegal
+                        Solicitor placeholder 3
                     </label>
                 </div>
             </div>
