most of the validation is done

--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -34,7 +34,7 @@ Case details
                             4523-3443-3226-2436
                         </dd>
                         <dd class="govuk-summary-list__actions">
-                            <a class="govuk-link" href="#">
+                            <a class="govuk-link" href="addenterdetails">
                                 Change
                             </a>
                         </dd>
@@ -48,7 +48,7 @@ Case details
                             Solicitor placeholder 2
                         </dd>
                         <dd class="govuk-summary-list__actions">
-                            <a class="govuk-link" href="#">
+                            <a class="govuk-link" href="selectroleprobate">
                                 Change
                             </a>
                         </dd>
@@ -61,7 +61,7 @@ Case details
                             Narran
                         </dd>
                         <dd class="govuk-summary-list__actions">
-                            <a class="govuk-link" href="#">
+                            <a class="govuk-link" href="securityquestionprobate">
                                 Change
                             </a>
                         </dd>
