--- a/app/views/noticeofchange/solicitor/addenterdetails.html
+++ b/app/views/noticeofchange/solicitor/addenterdetails.html
@@ -11,6 +11,22 @@ Case details
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-one-half">
 
+                {% if data.errorcasenumber == 'true' %}
+                    <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+                        <h2 class="govuk-error-summary__title" id="error-summary-title">
+                            There is a problem
+                        </h2>
+                        <div class="govuk-error-summary__body">
+                            <ul class="govuk-list govuk-error-summary__list">
+                                <li>
+                                    <a href="#casenumber">The case number must be 16 digits</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                {% endif %}
+
+
                 <div class="hmcts-page-heading">
                       <div class="hmcts-page-heading__title">
                            <h1 class="govuk-heading-l">Enter case number</h1>
@@ -24,15 +40,28 @@ Case details
                         id="aspnetForm"
                         autocomplete="off">
 
-                        <div class="govuk-form-group">
-                            <!--<label class="govuk-label" for="casenumber">
-                                Case number
-                            </label>-->
+                        {% if data.errorcasenumber == 'true' %}
+                            <div class="govuk-form-group govuk-form-group--error">
+                        {% else %}
+                            <div class="govuk-form-group ">
+                        {% endif %}
+
+
                           <span id="case-number-hint" class="govuk-hint">
                             This is a 16 digit number
                           </span>
-                            <input class="govuk-input govuk-input--width-10" id="casenumber" name="casenumber" type="text" spellcheck="false">
-                        </div>
+
+
+                            {% if data.errorcasenumber == 'true' %}
+                                <span id="national-insurance-number-error" class="govuk-error-message">
+                                    <span class="govuk-visually-hidden">Error:</span> The case number must be 16 digits
+                                </span>
+                                <input class="govuk-input govuk-input--width-10 govuk-input--error" id="casenumber" name="casenumber" type="text" spellcheck="false" value="{{data.casenumber}}">
+                            {% else %}
+                                <input class="govuk-input govuk-input--width-10" id="casenumber" name="casenumber" type="text" spellcheck="false" value="{{data.casenumber}}">
+                            {% endif %}
+
+                            </div>
 
 
                         <button class="govuk-button" data-module="govuk-button">
