--- a/app/views/noticeofchange/solicitor/selectroleprobate.html
+++ b/app/views/noticeofchange/solicitor/selectroleprobate.html
@@ -7,6 +7,22 @@ Case details
 
 {% block content %}
 
+    {% if data.errorrole == 'true' %}
+        <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+            <h2 class="govuk-error-summary__title" id="error-summary-title">
+                There is a problem
+            </h2>
+            <div class="govuk-error-summary__body">
+                <ul class="govuk-list govuk-error-summary__list">
+                    <li>
+                        <a href="#govuk-radios">You must select a role</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    {% endif %}
+
+
     <div class="hmcts-page-heading">
           <div class="hmcts-page-heading__title">
                <h1 class="govuk-heading-l">What will be your role in the case?</h1>
@@ -19,23 +35,30 @@ Case details
         id="aspnetForm"
         autocomplete="off">
 
-        <div class="govuk-form-group govuk-!-margin-bottom-7">
-            <div class="govuk-radios">
+        {% if data.errorrole == 'true' %}
+            <div class="govuk-form-group govuk-!-margin-bottom-7 govuk-form-group--error">
+                <span id="national-insurance-number-error" class="govuk-error-message">
+                    <span class="govuk-visually-hidden">Error:</span> Select a role
+                </span>
+        {% else %}
+            <div class="govuk-form-group govuk-!-margin-bottom-7">
+        {% endif %}
+            <div class="govuk-radios" id="govuk-radios">
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="solicitor" name="role" type="radio" value="solicitor" >
-                    <label class="govuk-label govuk-radios__label" for="solicitor">
+                    <input class="govuk-radios__input" id="radio1" name="role" type="radio" value="solicitor" >
+                    <label class="govuk-label govuk-radios__label" for="radio1">
                         Solicitor placeholder 1
                     </label>
                 </div>
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="barrister" name="role" type="radio" value="barrister" >
-                    <label class="govuk-label govuk-radios__label" for="barrister">
+                    <input class="govuk-radios__input" id="radio2" name="role" type="radio" value="barrister" >
+                    <label class="govuk-label govuk-radios__label" for="radio2">
                         Solicitor placeholder 2
                     </label>
                 </div>
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="paralegal" name="role" type="radio" value="paralegal" >
-                    <label class="govuk-label govuk-radios__label" for="paralegal">
+                    <input class="govuk-radios__input" id="radio3" name="role" type="radio" value="paralegal" >
+                    <label class="govuk-label govuk-radios__label" for="radio3">
                         Solicitor placeholder 3
                     </label>
                 </div>
