--- a/app/views/noticeofchange/solicitor/confirmation.html
+++ b/app/views/noticeofchange/solicitor/confirmation.html
@@ -58,7 +58,7 @@ Case details
                     {% endif %}
 
                     <p class="govuk-body">
-                        <a href="#">View the case</a>
+                        <a href="caselist">View case list</a>
                     </p>
                 {% endif %}
 
