--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -13,6 +13,22 @@ Case details
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds-from-desktop">
 
+                {% if data.errorsot == 'true' %}
+                    <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+                        <h2 class="govuk-error-summary__title" id="error-summary-title">
+                            There is a problem
+                        </h2>
+                        <div class="govuk-error-summary__body">
+                            <ul class="govuk-list govuk-error-summary__list">
+                                <li>
+                                    <a href="#sotruth">You haven't ticked the statement of truth</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                {% endif %}
+
+
                 <h1 class="govuk-heading-l">Check and submit</h1>
 
                 <dl class="govuk-summary-list govuk-!-margin-bottom-9">
@@ -68,41 +84,50 @@ Case details
                     </div>
                 </dl>
 
-
-                <!-- STAMENT OF STRUTH -->
-                <div class="govuk-form-group">
-                    <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
-                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                            <h2 class="govuk-fieldset__heading">
-                                Statement of truth
-                            </h2>
-                        </legend>
-                        <p>Tick to “sign” this statement of truth.</p>
-                        <div class="govuk-checkboxes">
-                            <div class="govuk-checkboxes__item">
-                                <input class="govuk-checkboxes__input" id="sot" name="sot" type="checkbox" value="carcasses">
-                                <label class="govuk-label govuk-checkboxes__label" for="sot">
-
-
-                                    <p>I believe myself or my organisation has been requested to represent a party in this case.</p>
-
-                                    <p>I understand that proceedings for contempt of court may be brought against
-                                        anyone who requests access to a case verified by a statement of truth without
-                                        an honest belief in its truth.</p>
-                                </label>
-                            </div>
-                        </div>
-                    </fieldset>
-                </div>
-
-
-
-                <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Notifications</h2>
-
-                <p class="govuk-body  govuk-!-margin-bottom-7">Once approved we will send a confirmation email of this notice of change to you snd the legal firm that is being taken off the record.</p>
-
-
                 <form  method="post" >
+
+                    <!-- STAMENT OF STRUTH -->
+                    {% if data.errorsot == 'true'%}
+                        <div class="govuk-form-group govuk-form-group--error" id="sotruth">
+                    {% else %}
+                        <div class="govuk-form-group">
+                    {% endif %}
+
+                        <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+                                <h2 class="govuk-fieldset__heading">
+                                    Statement of truth
+                                </h2>
+                            </legend>
+                            <p>Tick to “sign” this statement of truth.</p>
+                            {% if data.errorsot == 'true'%}
+                                <span id="national-insurance-number-error" class="govuk-error-message">
+                                      <span class="govuk-visually-hidden">Error:</span> Tick the box to sign the statement of truth
+                                </span>
+                            {% endif %}
+                            <div class="govuk-checkboxes">
+                                <div class="govuk-checkboxes__item">
+                                    <input class="govuk-checkboxes__input" id="sot" name="sot" type="checkbox">
+                                    <label class="govuk-label govuk-checkboxes__label" for="sot">
+                                        <p>I believe myself or my organisation has been requested to represent a party in this case.</p>
+
+                                        <p>I understand that proceedings for contempt of court may be brought against
+                                            anyone who requests access to a case verified by a statement of truth without
+                                            an honest belief in its truth.</p>
+                                    </label>
+                                </div>
+                            </div>
+                        </fieldset>
+                    </div>
+
+
+
+                    <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Notifications</h2>
+
+                    <p class="govuk-body  govuk-!-margin-bottom-7">Once approved we will send a confirmation email of this notice of change to you snd the legal firm that is being taken off the record.</p>
+
+
+
 
                     <input type="hidden" name="answers-checked" value="true">
 
