journeys done for probate and divorce

--- a/app/views/noticeofchange/solicitor/confirmstop.html
+++ b/app/views/noticeofchange/solicitor/confirmstop.html
@@ -71,7 +71,7 @@ Case details
                             Submit request
                         </button>
 
-                        <p><a href="casedetails.html">Stay representing</a></p>
+                        <p><a href="casedetailsprobate.html">Stay representing</a></p>
                 </form>
 
             </div>
