--- a/app/views/noticeofchange/solicitor/selectroleprobate.html
+++ b/app/views/noticeofchange/solicitor/selectroleprobate.html
@@ -45,19 +45,19 @@ Case details
         {% endif %}
             <div class="govuk-radios" id="govuk-radios">
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="radio1" name="role" type="radio" value="solicitor" >
+                    <input class="govuk-radios__input" id="radio1" name="role" type="radio" value="Solicitor placeholder 1" >
                     <label class="govuk-label govuk-radios__label" for="radio1">
                         Solicitor placeholder 1
                     </label>
                 </div>
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="radio2" name="role" type="radio" value="barrister" >
+                    <input class="govuk-radios__input" id="radio2" name="role" type="radio" value="Solicitor placeholder 2" >
                     <label class="govuk-label govuk-radios__label" for="radio2">
                         Solicitor placeholder 2
                     </label>
                 </div>
                 <div class="govuk-radios__item">
-                    <input class="govuk-radios__input" id="radio3" name="role" type="radio" value="paralegal" >
+                    <input class="govuk-radios__input" id="radio3" name="role" type="radio" value="Solicitor placeholder 3" >
                     <label class="govuk-label govuk-radios__label" for="radio3">
                         Solicitor placeholder 3
                     </label>
