--- a/app/views/noticeofchange/layoutdemo.html
+++ b/app/views/noticeofchange/layoutdemo.html
@@ -108,7 +108,7 @@
                 },
                 {
                 text: 'Take over representation',
-                href: getUrl('/solicitor/addenterdetails'),
+                href: getUrl('/startnoc'),
                 active: pageId == '#'
                 }
                 ],
