--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -47,7 +47,7 @@ Case details
                             Case number
                         </dt>
                         <dd class="govuk-summary-list__value">
-                            4523-3443-3226-2436
+                            {{data.casenumber}}
                         </dd>
                         <dd class="govuk-summary-list__actions">
                             <a class="govuk-link" href="addenterdetails">
@@ -61,7 +61,7 @@ Case details
                             Your role
                         </dt>
                         <dd class="govuk-summary-list__value">
-                            Solicitor placeholder 2
+                            {{data.role}}
                         </dd>
                         <dd class="govuk-summary-list__actions">
                             <a class="govuk-link" href="selectroleprobate">
@@ -69,19 +69,37 @@ Case details
                             </a>
                         </dd>
                     </div>
-                    <div class="govuk-summary-list__row">
-                        <dt class="govuk-summary-list__key">
-                            Last name of party
-                        </dt>
-                        <dd class="govuk-summary-list__value">
-                            Narran
-                        </dd>
-                        <dd class="govuk-summary-list__actions">
-                            <a class="govuk-link" href="securityquestionprobate">
-                                Change
-                            </a>
-                        </dd>
-                    </div>
+
+                    {% if data.divorcecaselist == 'true' %}
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Date case was submitted
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                {{data.day}} May {{data.year}}
+                            </dd>
+                            <dd class="govuk-summary-list__actions">
+                                <a class="govuk-link" href="securityquestionprobate">
+                                    Change
+                                </a>
+                            </dd>
+                        </div>
+                    {% else %}
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">
+                                Last name of party
+                            </dt>
+                            <dd class="govuk-summary-list__value">
+                                Narran
+                            </dd>
+                            <dd class="govuk-summary-list__actions">
+                                <a class="govuk-link" href="securityquestionprobate">
+                                    Change
+                                </a>
+                            </dd>
+                        </div>
+                    {% endif %}
+
                 </dl>
 
                 <form  method="post" >
